# oscars-rsotc-backend

./: .dockerignore  .env-sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  example_run_request.py  main.py  pixi.toml  process.mmd  pyproject.toml  sync_to_github.sh
app/: api_router.py  app.py  config.py  load.py
app/models/: annual_cycle.py  annual_cycle_params.py  climatology_map.py  climatology_map_params.py  extreme_values.py  extreme_values_params.py  histograms.py  histograms_params.py  summary_stats.py  summary_stats_params.py  time_series.py  time_series_params.py
app/routers/: annual_cycle.py  climatology_map.py  extreme_values.py  histograms.py  summary_stats.py  time_series.py
app/services/: annual_cycle.py  climatology_map.py  extreme_values.py  histograms.py  summary_stats.py  time_series.py
app/utils/: dataset_helpers.py  ensure_data_type.py  summary_stats_template.txt  time_filtering.py  time_filtering_indices.py  timings.py  transformation.py
docs/: README.md  conf.py  development.rst  index.rst  installation.rst  requirements.txt
docs/modules/: app.models.rst  app.routers.rst  app.rst  app.services.rst  app.utils.rst
tests/: conftest.py
tests/integration/: test_app.py  test_endpoints_validation.py  test_load.py
tests/unit/: test_get_annual_cycle.py  test_get_climatology_map.py  test_get_extreme_values.py  test_get_histograms.py  test_get_summary_stats.py  test_get_time_serie.py  test_load_multi.py  test_models_validation.py  test_s3_config.py  test_timedelta_serialization.py  test_transformation_utils.py  (+3 more)
